# EEGNet-vs-Tiny-Tranformer-EEG

./: .gitignore  best_params.json  capstone_experiment.py  dataset.py  model.py  train.py  train_with_openbci.py  tune.py
finetuned_openbci/: classification_report.txt
models/: __init__.py  eeg_transformer.py  encoder.py
models/embedding/: patch_embedding.py
openbci/: debug_openbci.sh  test.py
openbci/openbci/: Cargo.toml
openbci/openbci_data_collector/: Cargo.toml  QUICK_START.md  README_MOTOR_IMAGERY.md  collect_session.sh  collect_trial.sh  dataset_summary.sh  load_dataset.py
openbci/openbci_wifi_client/: Cargo.toml  stream.rs
openbci/openbci_wifi_client/src/: lib.rs  main.rs
openbci/pythonbci/: analyze_bci_competition.py  bci_completion_collectory.py  collect_data.py  fix_notebook.ipynb  model.py  train.py  tune.py
pretrained/: best_model.pth  classification_report.txt  latest_model.pth
tuning_trials/trial_0/: best_model.pth  latest_model.pth
tuning_trials/trial_1/: best_model.pth  latest_model.pth
tuning_trials/trial_10/: best_model.pth  latest_model.pth
tuning_trials/trial_11/: best_model.pth  latest_model.pth
tuning_trials/trial_12/: best_model.pth  latest_model.pth
tuning_trials/trial_13/: best_model.pth  latest_model.pth
tuning_trials/trial_14/: best_model.pth  latest_model.pth
tuning_trials/trial_15/: best_model.pth  latest_model.pth
tuning_trials/trial_16/: best_model.pth  latest_model.pth
tuning_trials/trial_17/: best_model.pth  latest_model.pth
tuning_trials/trial_18/: best_model.pth  latest_model.pth
(+180 files in other folders)
